# RCubiqStudio

./: CMakeLists.txt  DevGuide.md  README.md  ViewportWidget.h  abstractuinodes.h  appcore.cpp  appcore.h  appmessage.h  cachemanager.cpp  cachemanager.h  cube.vs.sc  datamanager.cpp  datamanager.h  devicemanager.cpp  devicemanager.h  devices.h  enginemanager.cpp  enginemanager.h  eventmanager.h  eventqueue.h  fileloader.cpp  icacheable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageprocessor.cpp  misc.h  renderapi.h  rendermanager.h  trackermanager.cpp  trackermanager.h  uirenderer.cpp  uirenderer.h  varying.def.sc  viewportwidget.cpp  viewportwidget.h
i18n/: M3_ru_RU.ts  Studio_ru_RU.ts
scripts/: register_obs_virtualcam.bat
shaders/: cube.fs.sc  debug.vs.sc  texture.fs.sc  texture.vs.sc  varying.def.sc
src/: abstractuinodes.h  appcore.cpp  appcore.h  appmessage.h  appsettings.cpp  appsettings.h  bushandle.h  cachemanager.cpp  cachemanager.h  consts.h  controllayer.cpp  controllayer.h  crashhandler.cpp  crashhandler.h  crashreportmanager.cpp  crashreportmanager.h  databus.cpp  databus.h  datamanager.cpp  datamanager.h  devicemanager.cpp  devicemanager.h  deviceregistrator.cpp  deviceregistrator.h  devices.cpp  devices.h  directsender.cpp  directsender.h  dynamiclibrary.cpp  dynamiclibrary.h  enginemanager.cpp  enginemanager.h  eventmanager.cpp  eventmanager.h  eventqueue.h  fileinstance.cpp  fileinstance.h  fileloader.cpp  fileloader.h  filesaver.cpp  (+47 more)
testEng/: core.cpp  core.h  outputdevice.cpp
ui/: main.qml  mainwindow.ui
